test/libsolidity/syntaxTests/constants/struct_constant.sol
struct S { uint x; }
S constant s;
// ----
// DeclarationError 9259: (21-33): Constants of non-value type not yet implemented.
